# zomato-recomendation-ai

./: .gitignore  config.yaml  next.config.mjs  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit_app.py  vercel.json
api/: index.py
app/: globals.css  layout.js  page.js
app/components/: Footer.jsx  Footer.module.css  Header.jsx  Header.module.css  PreferencesForm.jsx  PreferencesForm.module.css  RecommendationClient.jsx  RecommendationClient.module.css  RecommendationsGrid.jsx  RecommendationsGrid.module.css  RestaurantCard.jsx  RestaurantCard.module.css
design/stitch-zomato/: DESIGN.md  code.html
docs/: architecture.md  catalog_schema.md
scripts/: ingest_zomato.py
src/restaurant_rec/: __init__.py
src/restaurant_rec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/restaurant_rec/core/: __init__.py  config.py
src/restaurant_rec/phases/: __init__.py
src/restaurant_rec/phases/phase1/: __init__.py  ingest.py  schema.py  transform.py  validate.py
src/restaurant_rec/phases/phase2/: __init__.py  catalog_loader.py  filter.py  preferences.py
src/restaurant_rec/phases/phase3/: __init__.py  env_load.py  gemini_client.py  grounding.py  models.py  orchestration.py  parse.py  prompts.py
tests/: test_gemini_live_connection.py  test_phase1_ingest.py  test_phase1_transform.py  test_phase1_validate.py  test_phase2_catalog_loader.py  test_phase2_filter.py  test_phase2_integration.py  test_phase2_preferences.py  test_phase3_gemini_key.py  test_phase3_grounding.py  test_phase3_orchestration.py  test_phase3_parse.py  test_phase4_api.py
(+3 files in other folders)
